# helios

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  TODO.md
helios/: CMakeLists.txt  application.cpp  application.hpp  common.cpp  common.hpp  configuration.cpp  configuration.hpp  file_watcher.cpp  file_watcher.hpp  imgui_sdl_bridge.cpp  main.cpp  uniform_utils.cpp  uniform_utils.hpp  uniforms_locations.hpp
resources/: base_vertex.vert  config.json  copy.frag  raymarch_base.comp  raymarch_library.comp  raymarch_main.comp  raymarch_scene.comp
